fix(navabr):Fix layout issue by aligning the menu icon and search bar in a single row on small screens

--- a/src/features/Navbar/navbar.css
+++ b/src/features/Navbar/navbar.css
@@ -427,25 +427,25 @@
       font-size: large !important;
       color:#FFFFFF;
     }
-
     .search-bar{
       width: 100%;
       height: 40px;
       overflow: hidden;
       margin-bottom: 15px;
     }
-    
+    .custom-col{
+      width: 80% !important;
+    }
     
 
-    .container{
+    /* .container{
       justify-content: space-between !important;
-      
-    }
+    } */
 
     .menu-icon {
       display:block;
       cursor: pointer; 
-      margin-left: 15%; 
+      margin-left: 5px; 
       margin-bottom:  5px;
     }
 
